--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,8 @@ html, body{
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: #99806c;
+    background-color: #E7E7D2;
+    color: #900000;
 }
 
 body {
@@ -26,16 +27,16 @@ article h3 {
 }
 
 .btn-primary {
-    color: #000;
-    background-color: #AA7459;
-    border-color: #624131;
+    color: #900000;
+    background-color: #d2d2bc;
+    border-color: #800000;
     cursor: pointer;
 }
 
 .btn-primary:hover {
-    color: #000;
-    background-color: #895d47;
-    border-color: #624131;
+    color: #900000;
+    background-color: #E7E7D2;
+    border-color: #800000;
 }
 
 .btn-primary:focus {
@@ -44,7 +45,7 @@ article h3 {
 
 #excuse {
     font-size: 2em;
-    border: solid 2px #222;
+    border: solid 2px #800000;
     border-radius: 0.25em;
     flex: 1;
     margin-top: 2em;
@@ -62,15 +63,15 @@ article h3 {
 }
 
 footer .nav {
-    color: #000;
-    background-color: #AA7459;
-    border-color: #624131;
+    color: #900000;
+    background-color: #d2d2bc;
+    border-color: #800000;
 }
 
 footer .nav a {
-    color: #000;
+    color: #900000;
 }
 
 footer .nav li:hover {
-    background-color: #895d47;
+    background-color: #E7E7D2;
 }
